[gd_scene load_steps=80 format=3 uid="uid://csjlbc0wgjaks"]

[ext_resource type="Script" path="res://player/player.gd" id="1_ok1cc"]
[ext_resource type="Texture2D" uid="uid://dymcf23cebpix" path="res://assets/spritesheets/player/Sprites/Run.png" id="2_863pv"]
[ext_resource type="Texture2D" uid="uid://bona1td57nb5" path="res://assets/spritesheets/player/Sprites/Fall.png" id="2_n8dwx"]
[ext_resource type="Texture2D" uid="uid://d1byrlmcht5tn" path="res://assets/spritesheets/player/Sprites/Attack1.png" id="2_slcn5"]
[ext_resource type="Script" path="res://player/variables.gd" id="3_1gnp5"]
[ext_resource type="Texture2D" uid="uid://68pl3ms8ytlb" path="res://assets/spritesheets/player/Sprites/Idle.png" id="3_1ov7p"]
[ext_resource type="Script" path="res://player/state_machine.gd" id="3_aifyt"]
[ext_resource type="Texture2D" uid="uid://crouswjtlwmp4" path="res://assets/spritesheets/player/Sprites/Attack2.png" id="3_ce8x3"]
[ext_resource type="Texture2D" uid="uid://d2jpemxu5qstn" path="res://assets/spritesheets/player/Sprites/Jump.png" id="4_6du22"]
[ext_resource type="Texture2D" uid="uid://gh3dnk362j48" path="res://assets/spritesheets/player/Sprites/Attack3.png" id="4_uymdr"]
[ext_resource type="Texture2D" uid="uid://paawv5is0rk6" path="res://assets/spritesheets/player/Sprites/Death.png" id="5_64s3r"]
[ext_resource type="Texture2D" uid="uid://b06hhjwdx3jkm" path="res://assets/spritesheets/player/Sprites/Take hit.png" id="7_ef4c4"]
[ext_resource type="PackedScene" uid="uid://b4oeok61jolt5" path="res://player/shakable_camera.tscn" id="11_rrfpp"]
[ext_resource type="Script" path="res://player/fx_manager.gd" id="12_fj4yj"]
[ext_resource type="Texture2D" uid="uid://f6c5653p62iu" path="res://assets/particles/dust_particle.png" id="12_qodud"]
[ext_resource type="Script" path="res://player/audio_manager.gd" id="13_lwcf3"]
[ext_resource type="AudioStream" uid="uid://d3up6ipdc0kdi" path="res://assets/audio/FootstepGrass01.wav" id="14_kksle"]
[ext_resource type="AudioStream" uid="uid://ioyh4jop0qlc" path="res://assets/audio/step_sound.ogg" id="14_v2wwc"]
[ext_resource type="Texture2D" uid="uid://sf6m4wi5tm0l" path="res://assets/particles/dash.png" id="15_eoxsv"]
[ext_resource type="AudioStream" uid="uid://cllmiesertruu" path="res://assets/audio/jump.wav" id="16_p2r0t"]
[ext_resource type="Script" path="res://player/dash.gd" id="19_2xu3s"]
[ext_resource type="AudioStream" uid="uid://bhxsks302u3n0" path="res://assets/audio/swish_4.wav" id="20_fi74s"]
[ext_resource type="Script" path="res://player/focus_time.gd" id="22_dap8v"]
[ext_resource type="PackedScene" uid="uid://ccoha73w1wh38" path="res://player/weapons/bow.tscn" id="24_gk8cw"]
[ext_resource type="Script" path="res://player/weapons_manager.gd" id="24_mbqs2"]

[sub_resource type="AtlasTexture" id="AtlasTexture_43qbf"]
atlas = ExtResource("2_slcn5")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_sjlur"]
atlas = ExtResource("2_slcn5")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_kl3km"]
atlas = ExtResource("2_slcn5")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_6m8p1"]
atlas = ExtResource("2_slcn5")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_4wykr"]
atlas = ExtResource("2_slcn5")
region = Rect2(600, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_5jjt5"]
atlas = ExtResource("3_ce8x3")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_eh51p"]
atlas = ExtResource("3_ce8x3")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_ag18d"]
atlas = ExtResource("3_ce8x3")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_6u5ro"]
atlas = ExtResource("3_ce8x3")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_fb8bh"]
atlas = ExtResource("3_ce8x3")
region = Rect2(600, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_70ao4"]
atlas = ExtResource("4_uymdr")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_b566e"]
atlas = ExtResource("4_uymdr")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_x84ui"]
atlas = ExtResource("4_uymdr")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_kp5tb"]
atlas = ExtResource("4_uymdr")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_6s6xs"]
atlas = ExtResource("4_uymdr")
region = Rect2(600, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_kilb8"]
atlas = ExtResource("4_uymdr")
region = Rect2(750, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_7j1od"]
atlas = ExtResource("4_uymdr")
region = Rect2(900, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_ewejk"]
atlas = ExtResource("5_64s3r")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_hth5a"]
atlas = ExtResource("5_64s3r")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_dsdat"]
atlas = ExtResource("5_64s3r")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_2tiqq"]
atlas = ExtResource("5_64s3r")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_rnq78"]
atlas = ExtResource("5_64s3r")
region = Rect2(600, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_mwf05"]
atlas = ExtResource("5_64s3r")
region = Rect2(750, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_2cvc5"]
atlas = ExtResource("5_64s3r")
region = Rect2(900, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_kq1wo"]
atlas = ExtResource("5_64s3r")
region = Rect2(1050, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_2bvhn"]
atlas = ExtResource("2_n8dwx")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_ijewg"]
atlas = ExtResource("2_n8dwx")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_hfmmx"]
atlas = ExtResource("7_ef4c4")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_l7c74"]
atlas = ExtResource("7_ef4c4")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_cjpjp"]
atlas = ExtResource("7_ef4c4")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_m4glh"]
atlas = ExtResource("3_1ov7p")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_cuq56"]
atlas = ExtResource("3_1ov7p")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_r3xqv"]
atlas = ExtResource("3_1ov7p")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_nsyx6"]
atlas = ExtResource("3_1ov7p")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_nttkg"]
atlas = ExtResource("3_1ov7p")
region = Rect2(600, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_8hohf"]
atlas = ExtResource("3_1ov7p")
region = Rect2(750, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_umfyx"]
atlas = ExtResource("3_1ov7p")
region = Rect2(900, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_vc6s5"]
atlas = ExtResource("3_1ov7p")
region = Rect2(1050, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_n1x7p"]
atlas = ExtResource("4_6du22")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_wmu4q"]
atlas = ExtResource("4_6du22")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_gdhwm"]
atlas = ExtResource("2_863pv")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_ikv80"]
atlas = ExtResource("2_863pv")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_xebbk"]
atlas = ExtResource("2_863pv")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_uwjpy"]
atlas = ExtResource("2_863pv")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_asa7m"]
atlas = ExtResource("2_863pv")
region = Rect2(600, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_maf41"]
atlas = ExtResource("2_863pv")
region = Rect2(750, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_0s4op"]
atlas = ExtResource("2_863pv")
region = Rect2(900, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_v6tre"]
atlas = ExtResource("2_863pv")
region = Rect2(1050, 0, 150, 150)

[sub_resource type="SpriteFrames" id="SpriteFrames_wkxqd"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_43qbf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sjlur")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kl3km")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6m8p1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4wykr")
}],
"loop": false,
"name": &"attack1",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5jjt5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eh51p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ag18d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6u5ro")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fb8bh")
}],
"loop": false,
"name": &"attack2",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_70ao4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b566e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x84ui")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kp5tb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6s6xs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kilb8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7j1od")
}],
"loop": false,
"name": &"attack3",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ewejk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hth5a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dsdat")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2tiqq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rnq78")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mwf05")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2cvc5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kq1wo")
}],
"loop": false,
"name": &"death",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2bvhn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ijewg")
}],
"loop": true,
"name": &"fall",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hfmmx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l7c74")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cjpjp")
}],
"loop": false,
"name": &"hit",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_m4glh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cuq56")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r3xqv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nsyx6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nttkg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8hohf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_umfyx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vc6s5")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_n1x7p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wmu4q")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gdhwm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ikv80")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xebbk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uwjpy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_asa7m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_maf41")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0s4op")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v6tre")
}],
"loop": true,
"name": &"walk",
"speed": 16.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ea07y"]
radius = 29.0
height = 100.0

[sub_resource type="Curve" id="Curve_0h4l1"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0.098901), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_sj06u"]
curve = SubResource("Curve_0h4l1")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_ntgyi"]
particle_flag_disable_z = true
direction = Vector3(1, 1, 0)
spread = 180.0
initial_velocity_max = 91.4
gravity = Vector3(0, 98, 0)
linear_accel_min = 100.0
linear_accel_max = 100.0
radial_accel_min = -2.23517e-06
radial_accel_max = 22.54
scale_min = 0.1
scale_curve = SubResource("CurveTexture_sj06u")

[sub_resource type="CircleShape2D" id="CircleShape2D_gnjl2"]
radius = 29.0

[node name="Player" type="CharacterBody2D"]
floor_snap_length = 8.1
script = ExtResource("1_ok1cc")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
scale = Vector2(2.5, 2.5)
sprite_frames = SubResource("SpriteFrames_wkxqd")
animation = &"idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 6)
shape = SubResource("CapsuleShape2D_ea07y")

[node name="ShakableCamera" parent="." instance=ExtResource("11_rrfpp")]
ignore_rotation = false
max_roll = 0.025

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("3_aifyt")

[node name="Variables" type="Node" parent="."]
script = ExtResource("3_1gnp5")

[node name="FXManager" type="Node2D" parent="."]
script = ExtResource("12_fj4yj")

[node name="DashTexture" type="TextureRect" parent="FXManager"]
visible = false
texture_filter = 1
offset_left = -137.0
offset_top = -34.0
offset_right = 135.0
offset_bottom = 29.0
texture = ExtResource("15_eoxsv")

[node name="LandingDust" type="GPUParticles2D" parent="FXManager"]
position = Vector2(-3, 39)
emitting = false
amount = 20
process_material = SubResource("ParticleProcessMaterial_ntgyi")
texture = ExtResource("12_qodud")
lifetime = 0.3
one_shot = true
explosiveness = 1.0

[node name="Timers" type="Node" parent="."]

[node name="AudioManager" type="Node" parent="."]
script = ExtResource("13_lwcf3")

[node name="Footsteps" type="AudioStreamPlayer" parent="AudioManager"]
stream = ExtResource("14_v2wwc")
volume_db = -20.0

[node name="Landing" type="AudioStreamPlayer" parent="AudioManager"]
stream = ExtResource("14_kksle")

[node name="StepTimer" type="Timer" parent="AudioManager"]
wait_time = 0.2

[node name="Jump" type="AudioStreamPlayer" parent="AudioManager"]
stream = ExtResource("16_p2r0t")

[node name="Weapon" type="AudioStreamPlayer" parent="AudioManager"]

[node name="Hurtbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(59, 11)
shape = SubResource("CircleShape2D_gnjl2")

[node name="Dash" type="Node" parent="."]
script = ExtResource("19_2xu3s")

[node name="DashTimer" type="Timer" parent="Dash"]
wait_time = 0.2

[node name="Cooldown" type="Timer" parent="Dash"]

[node name="DashSound" type="AudioStreamPlayer" parent="Dash"]
stream = ExtResource("20_fi74s")

[node name="FocusTime" type="Node" parent="."]
script = ExtResource("22_dap8v")

[node name="FocusTimeShader" type="CanvasLayer" parent="FocusTime"]
visible = false

[node name="ColorRect" type="ColorRect" parent="FocusTime/FocusTimeShader"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.415686, 1, 0.623529, 0.384314)

[node name="FocusSound" type="AudioStreamPlayer" parent="FocusTime"]
stream = ExtResource("14_kksle")
pitch_scale = 0.2

[node name="WeaponsManager" type="Node2D" parent="."]
script = ExtResource("24_mbqs2")

[node name="Bow" parent="WeaponsManager" instance=ExtResource("24_gk8cw")]
position = Vector2(2, -13)

[connection signal="animation_finished" from="AnimatedSprite2D" to="StateMachine" method="_on_animated_sprite_2d_animation_finished"]
[connection signal="has_landed_signal" from="StateMachine" to="." method="_on_state_machine_has_landed_signal"]
[connection signal="has_landed_signal" from="StateMachine" to="Variables" method="reset_jump_velocity"]
[connection signal="has_landed_signal" from="StateMachine" to="FXManager" method="on_landed"]
[connection signal="has_landed_signal" from="StateMachine" to="AudioManager" method="_on_state_machine_has_landed_signal"]
[connection signal="timeout" from="AudioManager/StepTimer" to="AudioManager" method="_on_step_timer_timeout"]
[connection signal="timeout" from="Dash/DashTimer" to="Dash" method="_on_dash_timer_timeout"]
[connection signal="timeout" from="Dash/Cooldown" to="Dash" method="_on_cooldown_timeout"]
